src/styles/EmployeeDashboard/EmployeeDashboard.module.css
.main {
  background-color: #f5f8fe;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 6rem;
}

.subMain {
  display: flex;
  flex-direction: column;
  gap: 3.5rem;
}

.employeeHeader {
  position: fixed;
  z-index: 1;
  width: 100%;
  top: 0;
}

.navSection {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 72px;
  padding: 0 2.5rem;
  box-shadow: #42527607 5px 2px;
  background-color: white;
}

.navUser {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 2rem;
  align-items: center;
  height: 72px;
}

.navImage {
  width: 52px;
  height: 48px;
  border-radius: 50%;
  object-fit: contain;
  /* border: 2px solid #8790A3; */
}

.notifyBell {
  width: fit-content;
  height: fit-content;
  font-size: 2rem;
  color: #f5f8fe;
}

.groupNav {
  display: flex;
  align-items: center;
}

.drpDown {
  font-size: 2rem;
  cursor: pointer;
}

.nameJob {
  height: 72px;
  width: fit-content;
  text-align: center;
  align-items: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.nameJob p {
  margin-bottom: 0;
  margin-top: 0;
  color: #bbc4d9;
}

.nameJob p:first-of-type {
  font-weight: 600;
  color: black;
}

.dot {
  background-color: #fc665d;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  position: relative;
  float: right;
  right: 11px;
}

.profileMain {
  height: 336px;
  display: flex;
  width: 90%;
  margin: 0 auto;
  background-color: white;
  padding: 2rem;
  box-sizing: border-box;
  gap: 3rem;
}

.bioSection {
  display: flex;
  /* justify-content: center; */
  gap: 2rem;
  align-items: center;
  width: 50%;
  border-right: 1px solid #bbc4d9;
}
.employeeData {
  display: flex;
  flex-direction: column;
}

.otherInfo {
  display: flex !important;
  /* flex-direction: row; */
  gap: 1rem;
  /* width: 100%; */
}

.otherInfo p {
  font-size: 14px;
  color: #8790a3;
  font-weight: 400;
  width: fit-content;
}

.otherInfo .valInfo p {
  color: black;
  font-weight: 400;
}

.ppBoard {
  background-color: #fbfbfb;
  width: 186px;
  height: 186px;
  border-radius: 100%;
}

.ppBoard .rmPP {
  width: 186px;
  height: 186px;
  object-fit: cover;
  border-radius: 50%;
  margin: 0;
}

.ppBoard span {
  position: relative;
  float: right;
  margin-top: -30%;
  /* margin-top: 70%; */
  cursor: pointer;
}

.progressSection {
  width: 40%;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.CircularProgressbar-text {
  margin: 0 auto;
}

.report {
  display: flex;
  gap: 2rem;
  justify-content: space-between;
  align-items: center;
}

.progressLabel {
  font-size: 12px;
  color: #8790a3;
  text-align: center;
}

.editInfo {
  background-color: transparent;
  border: 2px solid var(--primary-color);
  width: 101px;
  height: 56px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 18px;
  color: var(--primary-color);
  cursor: pointer;
  float: right;
  clear: left;
  /* margin-top: -40px; */
}

.linkDashBoard {
  width: 90%;
  height: 9vh;
  background-color: white;
  margin: -2rem auto;
  box-shadow: rgba(100, 100, 111, 0.046) 0px 7px 29px 0px;
  padding: 1rem 3rem;
  box-sizing: border-box;
  display: flex;
  gap: 60px;
  /* justify-content: space-between; */
  align-items: center;
  align-content: flex-start;
  text-decoration: none;
}

.linkDashLink {
  list-style-type: none;
  text-decoration: none;
  color: black;
  font-weight: 200;
  font-size: 14px;
}

.hoverLink {
  font-weight: 700;
  position: relative;
  z-index: 1;
  /* background: #eee; */
}
.hoverLink:before {
  content: "";
  position: absolute;
  left: 0;
  bottom: -2px;
  height: 1px;
  width: 80%; /* or 100px */
  border-bottom: 2px solid #ff22ff;
}

.employeeCourse {
  width: 365px;
  height: 469px;
  background-color: white;
  text-align: center;
}

.employeeCourseMain {
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  margin-bottom: 3rem;
}
.courseCard {
  font-size: 16px;
  font-weight: 600;
  padding: 0.5rem;
  box-sizing: content-box;
  border-bottom: 1px solid #bbc4d9;
}

.progressCourse {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  justify-content: center;
  align-items: center;
  margin-top: 2rem;
}

.progressCourse p {
  font-size: 10px;
  font-weight: 600;
}
.trackProgress {
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.perTrack {
  font-size: 16px;
  font-weight: 600;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: left;
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.perTrack p {
  width: fit-content;
  margin-bottom: 0;
  margin-top: 0;
}

.perTrack p:first-of-type {
  color: #bbc4d9;
  font-size: 10px;
  font-weight: 400;
}

.contBtn {
  width: 248px;
  height: 56px;
  border-radius: 4px;
  background-color: transparent;
  border: 2px solid #5c00dd;
  color: #5c00dd;
  font-size: 14px;
  font-weight: 600;
  cursor: pointer;
}

.contBtn:hover {
  background-color: #5c00dd;
  color: white;
}

.accordMain {
  color: black;
}

.accordActive {
  background-color: #5c00dd;
  color: white;
  cursor: pointer;
}

.accordTitle {
  display: flex;
  justify-content: space-evenly;
  font-size: 20px;
  align-items: center;
  cursor: pointer;
}

.accordTitle h4:nth-of-type(2) {
  width: 150px;
}

.accordTitle div {
  height: fit-content;
}

.accodContent {
  width: 345px;
  display: flex;
  flex-direction: column;
  gap: 0.4rem;
  justify-content: center;
  align-items: left;
  box-sizing: border-box;
  cursor: pointer;
}

.accodList {
  display: flex;
  width: 100%;
  align-items: center;
  padding: 1rem 2rem;
}

.accodList div:nth-of-type(2) {
  width: fit-content;
}
.rev {
  border-bottom: 1px solid #8790a3;
  /* padding: 1rem 2rem; */
  cursor: pointer;
}

.revMark{
  background-color: #b7b9bd;
  /* width: 130%; */
}

.accordComplete {
  color: var(--primary-color);
}

.logout {
  position: absolute;
  background-color: white;
  box-shadow: 1px 1px 13px 5px #8790a325;
  /* padding: 0 1rem; */
  top: 4rem;
  border-radius: 4px;
  /* cursor: pointer; */
  font-weight: 600;
  /* right: -2rem; */
}

.logout p {
  padding: 0.7rem 1rem;
  cursor: pointer;
  margin: 0;
}

.logout p:hover {
  background-color: rgb(245, 245, 245);
}

.lessonText{
  width: 20px;
  margin-right: 3rem;
}

